--- a/content/post/2019-01-24-r-and-rstudio.Rmd
+++ b/content/post/2019-01-24-r-and-rstudio.Rmd
@@ -8,7 +8,7 @@ tags: []
 ---
 
 ```{r, echo = F, fig.align='center', out.width="400px", eval = F}
-knitr::include_graphics("~/keckcodeon/keckcodeon_blog/static/images/code_on_header.png")
+knitr::include_graphics("/images/code_on_header.png")
 ```
 
 # Are you a biologist with __BIG__ data? 
@@ -30,6 +30,6 @@ Wednesday 1/30/2019
 Can't make it and want to get added to the mailing list for future sessions? email keckcodeon@gmail.com
 
 ```{r, echo = F, fig.align='center', out.width="400px", eval = F}
-knitr::include_graphics("~/keckcodeon/keckcodeon_blog/static/images/code_on_wheel.png")
+knitr::include_graphics("/images/code_on_wheel.png")
 ```
 
