--- a/content/post/2019-01-24-r-and-rstudio.Rmd
+++ b/content/post/2019-01-24-r-and-rstudio.Rmd
@@ -15,17 +15,21 @@ knitr::include_graphics("/images/code_on_header.png")
 
 # Want to learn programming for the life sciences? 
 
+<span style="color:firebrick">
 ## Come join [CodeOn!](https://keckcodeon.netlify.com) 
+</span>
 
-### We're a community of data science learners committed to developing computational skills among Keck students. 
+### We're a community of data science learners sharing skills among Keck students. 
 
 ## We host gatherings every other week. Details below!
 
-> R and Rstudio  
+<span style="color:firebrick">
+> R and Rstudio
 led by Kevin Stachelek  
 NTT 4444  
 5:30 -6:30  
-Wednesday 1/30/2019 
+Wednesday 1/30/2019
+</span>
 
 Can't make it and want to get added to the mailing list for future sessions? email keckcodeon@gmail.com
 
