--- a/content/post/2019-01-24-r-and-rstudio.Rmd
+++ b/content/post/2019-01-24-r-and-rstudio.Rmd
@@ -7,7 +7,7 @@ categories: []
 tags: []
 ---
 
-```{r, echo = F, fig.align='center'}
+```{r, echo = F, fig.align='center', out.width="800px"}
 knitr::include_graphics("/images/code_on_header.png")
 ```
 
