change latest post

--- a/content/post/2019-02-11-working-with-dataframes-data-importing-and-a-basic-introduction-to-the-dplyr-package.Rmd
+++ b/content/post/2019-02-11-working-with-dataframes-data-importing-and-a-basic-introduction-to-the-dplyr-package.Rmd
@@ -1,5 +1,5 @@
 ---
-title: dataframes, data importing, and a basic introduction to the dplyr package
+title: Dataframes, data importing, and a basic introduction to the dplyr package
 author: Kevin Stachelek
 date: '2019-02-11'
 slug: dataframes-data-importing-and-dplyr
