--- a/content/post/2019-02-11-working-with-dataframes-data-importing-and-a-basic-introduction-to-the-dplyr-package.Rmd
+++ b/content/post/2019-02-11-working-with-dataframes-data-importing-and-a-basic-introduction-to-the-dplyr-package.Rmd
@@ -1,15 +1,11 @@
 ---
-title: Dataframes, data importing, and a basic introduction to the dplyr package
+title: "CodeOn! 02/13/2019: Dataframes, data importing, and intro to the dplyr package"
 author: Kevin Stachelek
 date: '2019-02-11'
 slug: dataframes-data-importing-and-dplyr
 categories: []
 tags: []
 ---
-
-```{r, echo = F, fig.align='center', out.width="700px"}
-knitr::include_graphics("/images/code_on_header.png")
-```
 
 # Are you a biologist with __BIG__ data? 
 
